[package]
name = "lurk-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lurk = { git = "https://github.com/lurk-lab/lurk-rs.git" }
halo2curves = { version = "0.6.0", features = ["bits", "derive_serde"] }